# ctrlaltelite

./: .gitignore  .taurignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.cursor/plans/: racing_telemetry_dashboard_a224edab.plan.md
.github/workflows/: release.yml
public/track-maps/: miami-international-autodrome-grand-prix.json
scripts/: convert-ibt.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: LapAnalysis.tsx  Overview.tsx  TelemetryFileList.tsx  TitleBar.tsx  nested.tsx  types.ts
src/components/admin/: TrackDesigner.tsx
src/components/lap-analysis/: LapComparisonLegend.tsx  LapSelector.tsx  LapStatsBar.tsx  SectorIndicators.tsx  SectorTimesTable.tsx  SelectedLapsSummary.tsx  SessionInfo.tsx  TelemetrySourceInput.tsx  constants.ts  telemetry-data-utils.ts  types.ts
src/components/telemetry/: CursorOverlay.tsx  CustomTooltip.tsx  DraggableChart.tsx  SyncedChart.tsx  types.ts  utils.ts
src/components/track/: TrackMap.tsx  TrackMap3D.tsx  types.ts
src/components/ui/: sortable.tsx
src/lib/: cursorStore.tsx  ibt.ts  sector-utils.ts  telemetry-scanner.ts  telemetry-utils.ts  track-map-utils.ts
